{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 69,
  "lineage": "c1e95017-410d-8337-5919-148965b01451",
  "resources": [
    {
      "module": "module.HubandSpoke",
      "mode": "managed",
      "type": "azurerm_firewall_policy",
      "name": "firewall_policy",
      "provider": "module.HubandSpoke.provider[\"registry.terraform.io/hashicorp/azurerm\"].hub",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "base_policy_id": "",
            "child_policies": [],
            "dns": [],
            "firewalls": [
              "/subscriptions/664c64a0-33d1-4720-bd86-4b7d96e7ac4d/resourceGroups/hub-rg/providers/Microsoft.Network/azureFirewalls/azurefirewall"
            ],
            "id": "/subscriptions/664c64a0-33d1-4720-bd86-4b7d96e7ac4d/resourceGroups/hub-rg/providers/Microsoft.Network/firewallPolicies/AzureFirewallPolicy",
            "identity": [],
            "insights": [],
            "intrusion_detection": [],
            "location": "centralus",
            "name": "AzureFirewallPolicy",
            "private_ip_ranges": [],
            "resource_group_name": "hub-rg",
            "rule_collection_groups": [],
            "sku": "Standard",
            "tags": {},
            "threat_intelligence_allowlist": [],
            "threat_intelligence_mode": "Alert",
            "timeouts": null,
            "tls_certificate": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.HubandSpoke.azurerm_resource_group.hub_rg"
          ]
        }
      ]
    },
    {
      "module": "module.HubandSpoke",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "ip",
      "provider": "module.HubandSpoke.provider[\"registry.terraform.io/hashicorp/azurerm\"].hub",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/664c64a0-33d1-4720-bd86-4b7d96e7ac4d/resourceGroups/hub-rg/providers/Microsoft.Network/publicIPAddresses/pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.173.148.60",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "pip",
            "resource_group_name": "hub-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
            }
          },
          "dependencies": [
            "module.HubandSpoke.azurerm_resource_group.hub_rg"
          ]
        }
      ]
    },
    {
      "module": "module.HubandSpoke",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "route_table_qa",
      "provider": "module.HubandSpoke.provider[\"registry.terraform.io/hashicorp/azurerm\"].hub",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/664c64a0-33d1-4720-bd86-4b7d96e7ac4d/resourceGroups/hub-rg/providers/Microsoft.Network/routeTables/routetable_qa",
            "location": "westus",
            "name": "routetable_qa",
            "resource_group_name": "hub-rg",
            "route": [
              {
                "address_prefix": "172.17.0.0/16",
                "name": "route_qa",
                "next_hop_in_ip_address": "192.168.2.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/664c64a0-33d1-4720-bd86-4b7d96e7ac4d/resourceGroups/spoke-rg-qa/providers/Microsoft.Network/virtualNetworks/spoke-qa/subnets/spoke_qa-subnet"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.HubandSpoke.azurerm_firewall.firewall",
            "module.HubandSpoke.azurerm_firewall_policy.firewall_policy",
            "module.HubandSpoke.azurerm_public_ip.ip",
            "module.HubandSpoke.azurerm_resource_group.hub_rg",
            "module.HubandSpoke.azurerm_resource_group.spoke_qa_rg",
            "module.HubandSpoke.azurerm_subnet.firewall_subnet",
            "module.HubandSpoke.azurerm_virtual_network.vnet_hub",
            "module.HubandSpoke.azurerm_virtual_network.vnet_spoke_qa"
          ]
        }
      ]
    },
    {
      "module": "module.HubandSpoke",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "firewall_subnet",
      "provider": "module.HubandSpoke.provider[\"registry.terraform.io/hashicorp/azurerm\"].hub",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/664c64a0-33d1-4720-bd86-4b7d96e7ac4d/resourceGroups/hub-rg/providers/Microsoft.Network/virtualNetworks/hub/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "resource_group_name": "hub-rg",
            "virtual_network_name": "hub"
          },
          "dependencies": [
            "module.HubandSpoke.azurerm_resource_group.hub_rg",
            "module.HubandSpoke.azurerm_virtual_network.vnet_hub"
          ]
        }
      ]
    },
    {
      "module": "module.HubandSpoke",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "spoke_qa_subnet",
      "provider": "module.HubandSpoke.provider[\"registry.terraform.io/hashicorp/azurerm\"].hub",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.17.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/664c64a0-33d1-4720-bd86-4b7d96e7ac4d/resourceGroups/spoke-rg-qa/providers/Microsoft.Network/virtualNetworks/spoke-qa/subnets/spoke_qa-subnet",
            "name": "spoke_qa-subnet",
            "resource_group_name": "spoke-rg-qa",
            "virtual_network_name": "spoke-qa"
          },
          "dependencies": [
            "module.HubandSpoke.azurerm_resource_group.spoke_qa_rg",
            "module.HubandSpoke.azurerm_virtual_network.vnet_spoke_qa"
          ]
        }
      ]
    },
    {
      "module": "module.HubandSpoke",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "route_subnet_qa",
      "provider": "module.HubandSpoke.provider[\"registry.terraform.io/hashicorp/azurerm\"].hub",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/664c64a0-33d1-4720-bd86-4b7d96e7ac4d/resourceGroups/spoke-rg-qa/providers/Microsoft.Network/virtualNetworks/spoke-qa/subnets/spoke_qa-subnet",
            "route_table_id": "/subscriptions/664c64a0-33d1-4720-bd86-4b7d96e7ac4d/resourceGroups/hub-rg/providers/Microsoft.Network/routeTables/routetable_qa",
            "subnet_id": "/subscriptions/664c64a0-33d1-4720-bd86-4b7d96e7ac4d/resourceGroups/spoke-rg-qa/providers/Microsoft.Network/virtualNetworks/spoke-qa/subnets/spoke_qa-subnet"
          },
          "dependencies": [
            "module.HubandSpoke.azurerm_firewall.firewall",
            "module.HubandSpoke.azurerm_firewall_policy.firewall_policy",
            "module.HubandSpoke.azurerm_public_ip.ip",
            "module.HubandSpoke.azurerm_resource_group.hub_rg",
            "module.HubandSpoke.azurerm_resource_group.spoke_qa_rg",
            "module.HubandSpoke.azurerm_route_table.route_table_qa",
            "module.HubandSpoke.azurerm_subnet.firewall_subnet",
            "module.HubandSpoke.azurerm_subnet.spoke_qa_subnet",
            "module.HubandSpoke.azurerm_virtual_network.vnet_hub",
            "module.HubandSpoke.azurerm_virtual_network.vnet_spoke_qa"
          ]
        }
      ]
    },
    {
      "module": "module.HubandSpoke",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet_hub",
      "provider": "module.HubandSpoke.provider[\"registry.terraform.io/hashicorp/azurerm\"].hub",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.0.0/16"
            ],
            "dns_servers": [
              "192.168.0.4",
              "192.168.0.5"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "7909f683-d478-4269-98da-1aae2cdaa886",
            "id": "/subscriptions/664c64a0-33d1-4720-bd86-4b7d96e7ac4d/resourceGroups/hub-rg/providers/Microsoft.Network/virtualNetworks/hub",
            "location": "centralus",
            "name": "hub",
            "resource_group_name": "hub-rg",
            "subnet": [
              {
                "address_prefix": "192.168.2.0/24",
                "id": "/subscriptions/664c64a0-33d1-4720-bd86-4b7d96e7ac4d/resourceGroups/hub-rg/providers/Microsoft.Network/virtualNetworks/hub/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet"
              }
            ],
            "tags": {
            }
          },
          "dependencies": [
            "module.HubandSpoke.azurerm_resource_group.hub_rg"
          ]
        }
      ]
    },
    {
      "module": "module.HubandSpoke",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet_spoke_qa",
      "provider": "module.HubandSpoke.provider[\"registry.terraform.io/hashicorp/azurerm\"].hub",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.17.0.0/16"
            ],
            "dns_servers": [
              "172.17.0.4",
              "172.17.0.5"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "89e4bcfb-0f44-4f21-913d-bf8640939ccf",
            "id": "/subscriptions/664c64a0-33d1-4720-bd86-4b7d96e7ac4d/resourceGroups/spoke-rg-qa/providers/Microsoft.Network/virtualNetworks/spoke-qa",
            "location": "westus",
            "name": "spoke-qa",
            "resource_group_name": "spoke-rg-qa",
            "subnet": [
              {
                "address_prefix": "172.17.1.0/24",
                "id": "/subscriptions/664c64a0-33d1-4720-bd86-4b7d96e7ac4d/resourceGroups/spoke-rg-qa/providers/Microsoft.Network/virtualNetworks/spoke-qa/subnets/spoke_qa-subnet",
                "name": "spoke_qa-subnet"
              }
            ],
            "tags": {
            }
          },
          "dependencies": [
            "module.HubandSpoke.azurerm_resource_group.spoke_qa_rg"
          ]
        }
      ]
    }
  ]
}